# voice-agent-healthcare

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  prompt.md  pyproject.toml  start.sh
.claude/agents/: backend-e2e-tester.md  fullstack-ui-engineer.md  senior-ai-python-fixer.md
alembic/: env.py
alembic/versions/: 001_initial.py
scripts/: ingest_kb.py  seed_test_data.py
src/api/: clients.py  config.py  dependencies.py  main.py
src/api/agents/: booking_agent.py  intent_classifier.py  kb_retrieval.py  orchestrator.py  search_agent.py  synthesizer.py  test_booking_agent.py  test_intent_classifier.py  test_orchestrator.py
src/api/db/: engine.py  models.py  queries.py
src/api/prompts/: booking.py  intent.py  synthesizer.py
src/api/rag/: ingest.py  retriever.py
src/api/routers/: auth.py  booking_rules.py  bookings.py  businesses.py  call_logs.py  knowledge_base.py  services.py  voice_gateway.py
src/api/test/: conftest.py  test_auth.py  test_booking_rules.py  test_bookings.py  test_businesses.py  test_call_logs.py  test_error_paths.py  test_health.py  test_jwt_auth.py  test_knowledge_base.py  test_services.py  test_voice_gateway.py
src/api/voice/: audio_utils.py  stt.py  test_stt.py  test_tts.py  tts.py  twilio_handler.py
src/api_schema/: schemas.py
src/mobile/: pubspec.yaml
src/mobile/android/app/: build.gradle.kts
src/mobile/lib/: app.dart  config.dart  main.dart
src/shared/: errors.py  types.py  validators.py
src/web/: index.html  package.json
src/web/src/: api.ts  main.tsx
(+47 files in other folders)
